--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+env_logger = "0.11.3"
 poise = "0.6.1"
+regex = "1.10.4"
+reqwest = "0.11.27"
+songbird = "0.4.1"
+symphonia = { version = "0.5.4", features = ["wav"] }
 tokio = { version = "1.36.0", default-features = false, features = ["rt-multi-thread"] }
+url = "2.5.0"
