--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 env_logger = "0.11.6"
+mongodb = "3.2.1"
 poise = "0.6.1"
 regex = "1.11.1"
-reqwest = "0.11.27"
+reqwest = "0.12.12"
 songbird = "0.4.6"
 symphonia = { version = "0.5.4", features = ["wav"] }
 tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread"] }
