--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ env_logger = "0.11.6"
 mongodb = "3.2.1"
 poise = "0.6.1"
 regex = "1.11.1"
-reqwest = "0.12.12"
+reqwest = { version = "0.12.12", features = ["stream"] }
 songbird = "0.5.0"
 symphonia = { version = "0.5.4", features = ["wav"] }
 tokio = { version = "1.43.0", default-features = false, features = ["rt-multi-thread"] }
