--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.22.1"
 env_logger = "0.11.8"
+futures = "0.3.31"
 mongodb = "3.2.3"
 poise = "0.6.1"
 regex = "1.11.1"
