--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,6 +45,9 @@ jobs:
             password: '${{ steps.auth.outputs.access_token }}'
             registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
 
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+
         - name: Delete unnecessary docker image
           run: gcloud artifacts docker images delete '${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.IMAGE }}' --delete-tags || (echo "Some error ignored."; exit 0)
 
@@ -54,6 +57,7 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
+            platforms: linux/amd64,linux/arm64
             tags: '${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.IMAGE }}:${{ github.sha }}'
 
   push-to-docker-hub:
@@ -62,15 +66,21 @@ jobs:
     steps:
         - name: Check out
           uses: actions/checkout@v4
+
         - name: Log in to Docker Hub
           uses: docker/login-action@v3
           with:
             username: ${{ vars.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+
         - name: Build and push Docker image
           uses: docker/build-push-action@v6
           with:
             context: .
             file: ./Dockerfile
             push: true
+            platforms: linux/amd64,linux/arm64
             tags: yngyu/hwh-rs-bot:latest
