--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,10 @@
 name: Deployment
 
 on:
-    push:
-        branches:
-            - master
-    workflow_dispatch:
+  push:
+    branches:
+      - master
+  workflow_dispatch:
 
 env:
   PROJECT_ID: unique-machine-360813
@@ -13,11 +13,44 @@ env:
   IMAGE: hwh-rs-bot
 
 jobs:
-  push-to-artifact-registry:
-    name: Push Docker image to Artifact Registry
+  delete-existing-images:
+    name: Delete existing Docker images
     runs-on: ubuntu-latest
 
-    # Add "id-token" with the intended permissions.
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
+    steps:
+        - name: Check out
+          uses: actions/checkout@v4
+
+        - name: Google Auth
+          id: auth
+          uses: 'google-github-actions/auth@v2'
+          with:
+            token_format: 'access_token'
+            workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
+            service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
+
+        - name: Set up Cloud SDK
+          uses: 'google-github-actions/setup-gcloud@v2'
+
+        - name: Delete unnecessary docker image
+          run: gcloud artifacts docker images delete '${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.IMAGE }}' --delete-tags || (echo "Already deleted."; exit 0)
+
+  push-to-artifact-registry:
+    name: Push Docker image to Artifact Registry (${{ matrix.arch }})
+    runs-on: ${{ matrix.runner }}
+    needs: delete-existing-images
+    strategy:
+      matrix:
+        include:
+          - arch: amd64
+            runner: ubuntu-latest
+          - arch: arm64
+            runner: ubuntu-24.04-arm
+
     permissions:
       contents: 'read'
       id-token: 'write'
@@ -48,21 +81,64 @@ jobs:
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v3
 
-        - name: Delete unnecessary docker image
-          run: gcloud artifacts docker images delete '${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.IMAGE }}' --delete-tags || (echo "Some error ignored."; exit 0)
-
         - name: Build and push Docker image
           uses: docker/build-push-action@v6
           with:
             context: .
             file: ./Dockerfile
             push: true
-            platforms: linux/amd64,linux/arm64
-            tags: '${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.IMAGE }}:${{ github.sha }}'
+            platforms: linux/${{ matrix.arch }}
+            tags: '${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.IMAGE }}:${{ github.sha }}-${{ matrix.arch }}'
+            provenance: 'false'
+
+  create-multiarch-manifest-on-artifact-registry:
+    name: Create and Push Multi-Arch Manifest
+    runs-on: ubuntu-latest
+    needs: push-to-artifact-registry
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
+    steps:
+      - name: Google Auth
+        id: auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          token_format: 'access_token'
+          workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
+          service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
+
+      - name: Set up Cloud SDK
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: Configure Docker for GAR
+        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
+
+      - name: Create and push multi-arch manifest with SHA tag
+        env:
+          DOCKER_CLI_EXPERIMENTAL: enabled
+        run: |
+          MANIFEST_SHA="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.IMAGE }}:${{ github.sha }}"
+          IMAGE_AMD64="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.IMAGE }}:${{ github.sha }}-amd64"
+          IMAGE_ARM64="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.IMAGE }}:${{ github.sha }}-arm64"
+
+          docker manifest create "${MANIFEST_SHA}" \
+            --amend "${IMAGE_AMD64}" \
+            --amend "${IMAGE_ARM64}"
+          
+          docker manifest push "${MANIFEST_SHA}"
 
   push-to-docker-hub:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
+    name: Push Docker image to Docker Hub (${{ matrix.arch }})
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      matrix:
+        include:
+          - arch: amd64
+            runner: ubuntu-latest
+          - arch: arm64
+            runner: ubuntu-24.04-arm
     steps:
         - name: Check out
           uses: actions/checkout@v4
@@ -82,5 +158,25 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
-            platforms: linux/amd64,linux/arm64
-            tags: yngyu/hwh-rs-bot:latest
+            platforms: linux/${{ matrix.arch }}
+            tags: yngyu/hwh-rs-bot:${{ github.sha }}-${{ matrix.arch }}
+            provenance: 'false'
+
+  create-multiarch-manifest:
+    name: Create and Push Multi-Arch Manifest
+    needs: push-to-docker-hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Create and push manifest
+        run: |
+          docker manifest create yngyu/hwh-rs-bot:latest \
+            --amend yngyu/hwh-rs-bot:${{ github.sha }}-amd64 \
+            --amend yngyu/hwh-rs-bot:${{ github.sha }}-arm64
+
+          docker manifest push yngyu/hwh-rs-bot:latest
